Tolerate a null scheduler in V8 initialization

Some utility processes need to initailize Blink and V8, and V8
initialization now assumes the main thread provides a scheduler; but
a utility process' main thread does not in fact provide one.

This eliminates the recently introduced assumption of a non-null scheduler,
defaulting to the previous behavior (using the current ThreadTaskRunnerHandle)
when no scheduler is provided.

BUG=679911
R=jochen@chromium.org

Review-Url: https://codereview.chromium.org/2624033002
Cr-Commit-Position: refs/heads/master@{#442901}

Former-commit-id: 7b9e6bc428d965901cec2999f5ed0933b81bdd29