third_party/WebKit/Source/bindings/core/v8/V8PerIsolateData.cpp
@@ -55,7 +55,7 @@ static void microtasksCompletedCallback(v8::Isolate* isolate) {
 
 V8PerIsolateData::V8PerIsolateData(WebTaskRunner* taskRunner)
     : m_isolateHolder(WTF::makeUnique<gin::IsolateHolder>(
-          taskRunner->toSingleThreadTaskRunner())),
+          taskRunner ? taskRunner->toSingleThreadTaskRunner() : nullptr)),
       m_stringCache(WTF::wrapUnique(new StringCache(isolate()))),
       m_hiddenValue(V8HiddenValue::create()),
       m_privateProperty(V8PrivateProperty::create()),
